Add images and initial text to first recipes
Soba Noodle Salad recipe page has image, ingredients and description.
Steps are incomplete for now.

--- a/recipes/soba_noodle_salad.html
+++ b/recipes/soba_noodle_salad.html
@@ -8,5 +8,26 @@
 </head>
 <body>
     <h1>Soba Noodle Salad</h1>
+    <img src="../images/soba_salad.jpeg">
+    <h2>Description</h2>
+    <p>
+        A tasty Japanese soba noodle salad. Perfect for nice summer's day. With only a few simple ingredients, this dish will be a crowd-pleaser for sure!
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Soba noodles</li>
+        <li>Green onions</li>
+        <li>Coriander</li>
+        <li>Roasted sesame seeds</li>
+        <li>Dressing:</li>
+        <ul>
+            <li>Neutral Oil</li>
+            <li>Roasted Sesame Oil</li>
+            <li>Crushed chili flakes</li>
+            <li>Honey</li>
+            <li>Soy Sauce</li>
+        </ul>
+    </ul>
+    <h2>Steps</h2>
 </body>
 </html>
