Add French Toast Recipe Page

--- a/recipes/french_toast.html
+++ b/recipes/french_toast.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Soba Noodle Salad</h1>
-    <img src="../images/soba_salad.jpeg" alt="Soba Salad Noodles">
+    <h1>French Toast</h1>
+    <img src="../images/french_toast.jpeg" alt="French Toast">
     <h2>Description</h2>
     <p>
-        A tasty Japanese soba noodle salad. Perfect for nice summer's day. With only a few simple ingredients, this dish will be a crowd-pleaser for sure!
+        Fluffy and scrumptious French Toast. Perfect for a warm wintery morning brunch or breakfast treat!
     </p>
     <h2>Ingredients</h2>
     <ul>
@@ -32,7 +32,7 @@
     <ol>
         <li><strong>Make the salad dressing:</strong>
             Heat the neutral oil, sesame oil, and red chili pepper flakes in a saucepan and cook until fragrant. Remove from the heat and add the honey and soy sauce. Set aside to cool.
-
+            
         </li>
         <li><strong>Boil the soba noodles:</strong>
             Cook according to the package instructions. Drain and rinse off the starch under cold running water. Drain well and set aside.
