Create eggplant page. Finish French Toast page.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/soba_noodle_salad.html">Soba Noodle Salad</a>
+    <a href="./recipes/french_toast.html">French Toast</a>
 </body>
 </html>
