Eggplant page completed.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Odin Recipes</h1>
     <a href="./recipes/soba_noodle_salad.html">Soba Noodle Salad</a>
     <a href="./recipes/french_toast.html">French Toast</a>
+    <a href="./recipes/eggplant.html">Roasted Eggplant</a>
 </body>
 </html>
