--- a/recipes/eggplant.html
+++ b/recipes/eggplant.html
@@ -4,36 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Eggplant Recipe</title>
 </head>
 <body>
-    <h1>French Toast</h1>
-    <img src="../images/french_toast1.jpeg" alt="French Toast">
+    <h1>Roasted Eggplant</h1>
+    <img src="../images/roasted_eggplant.jpeg" alt="Roasted Eggplant">
     <h2>Description</h2>
     <p>
-        Fluffy and scrumptious French Toast. Perfect for a warm wintery morning brunch or breakfast treat!
+        Carmelised and golden eggplant. Blasted in a hot oven for your satisfaction.
     </p>
     <h2>Ingredients</h2>
     <ul>
-        <li>2 large eggs</li>
-        <li>1 cup milk</li>
-        <li>Pinch of kosher salt</li>
-        <li>1 tablespoon granulated sugar</li>
-        <li>1 teaspoon vanilla extract</li>
-        <li>1 teaspoon ground cinnamon</li>
-        <li>8 slices sandwich bread</li>
-        <li>butter</li>
+        <li>2 medium eggplants (700g)</li>
+        <li>3 tablespoons olive oil</li>
+        <li>1/2 tsp salt</li>
+        <li>1/2 tsp black pepper</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li><strong>Whisk and dip:</strong>
-            Whisk together eggs, milk, salt, sugar, vanilla extract, and ground cinnamon in a flat-bottomed shallow baking dish. Place bread slices, one or two at a time, into the egg mixture and flip to make sure both sides of bread are well-coated.            
-        </li>
-        <li><strong>Cook:</strong>
-            Melt butter in a large skillet or on a griddle. Place bread slices in skillet or on griddle and cook on medium heat until golden brown on each side, about 2-3 minutes.
-        </li>
-        <li><strong>Serve:</strong>Serve immediately or keep warm in oven until ready to serve, but no longer than about 30 minutes.
-        </li>
+        <li>Preheat oven to 240C (220C fan)</li>
+        <li>Line a tray with parchment/baking paper (optional – recommended for first timers so you don’t lose the caramelised surface).</li>
+        <li>Cut eggplant into large cubes – 3 cm / 1.2″. Place in large bowl, drizzle with oil, salt and pepper.</li>
+        <li>Toss well, spread on tray, roast 20 minutes. Turn, roast for a further 10 minutes – edges should be caramelised, soft inside, but they’re not shrivelled up and dismal.</li>
+        <li>Transfer to serving plate. Delicious served plain, but see below for some finishing options.</li>
     </ol>
 </body>
 </html>
