--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/soba_noodle_salad.html">Soba Noodle Salad</a>
-    <a href="./recipes/french_toast.html">French Toast</a>
+    <a href="./recipes/soba_noodle_salad.html">Soba Noodle Salad</a><br>
+    <a href="./recipes/french_toast.html">French Toast</a><br>
     <a href="./recipes/eggplant.html">Roasted Eggplant</a>
 </body>
 </html>
