--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/soba_noodle_salad.html">Soba Noodle Salad</a><br>
-    <a href="./recipes/french_toast.html">French Toast</a><br>
-    <a href="./recipes/eggplant.html">Roasted Eggplant</a>
+    <ul>
+    <li><a href="./recipes/soba_noodle_salad.html">Soba Noodle Salad</a></li>
+    <li><a href="./recipes/french_toast.html">French Toast</a></li>
+    <li><a href="./recipes/eggplant.html">Roasted Eggplant</a></li>
+    </ul>
 </body>
 </html>
