--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <ul>
-    <li><a href="./recipes/soba_noodle_salad.html">Soba Noodle Salad</a></li>
-    <li><a href="./recipes/french_toast.html">French Toast</a></li>
-    <li><a href="./recipes/eggplant.html">Roasted Eggplant</a></li>
-    </ul>
+<body>  
+    <h1 id="home-title">Odin Recipes</h1>
+    <div>
+        <ul id="recipe-list">
+            <li class="recipes"><a href="./recipes/soba_noodle_salad.html">Soba Noodle Salad</a></li>
+            <li class="recipes"><a href="./recipes/french_toast.html">French Toast</a></li>
+            <li class="recipes"><a href="./recipes/eggplant.html">Roasted Eggplant</a></li>
+        </ul>
+    </div>
 </body>
 </html>
