Fix CSS typo and resize images
All images resize to fixed width with object-fit to preserve ratio.
Typo in stylesheet reference now fixed.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>  
     <h1 id="home-title">Odin Recipes</h1>
-    <div>
-        <ul id="recipe-list">
+    <div class="container">
+        <ul class="recipe-list">
             <li class="recipes"><a href="./recipes/soba_noodle_salad.html">Soba Noodle Salad</a></li>
             <li class="recipes"><a href="./recipes/french_toast.html">French Toast</a></li>
             <li class="recipes"><a href="./recipes/eggplant.html">Roasted Eggplant</a></li>
