Make recipes colourful
Added CSS to change colour of recipe pages.

--- a/recipes/eggplant.html
+++ b/recipes/eggplant.html
@@ -7,7 +7,7 @@
     <title>Eggplant Recipe</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body>
+<body class="eggplant">
     <h1>Roasted Eggplant</h1>
     <img src="../images/roasted_eggplant.jpeg" alt="Roasted Eggplant">
     <h2>Description</h2>
