--- a/recipes/soba_noodle_salad.html
+++ b/recipes/soba_noodle_salad.html
@@ -7,7 +7,7 @@
     <title>Soba Noodle Salad Recipe</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body>
+<body class="soba">
     <h1>Soba Noodle Salad</h1>
     <img src="../images/soba_salad.jpeg" alt="Soba Salad Noodles">
     <h2>Description</h2>
