--- a/recipes/french_toast.html
+++ b/recipes/french_toast.html
@@ -7,7 +7,7 @@
     <title>French Toast Recipe</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body>
+<body class="french">
     <h1>French Toast</h1>
     <img src="../images/french_toast1.jpeg" alt="French Toast">
     <h2>Description</h2>
