Style changes to css

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Odin Recipes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>  
-    <h1 id="home-title">Odin Recipes</h1>
+<body>
+    <div class="nav-bar">
+        <h1 id="home-title">Odin Recipes</h1>
+    </div>
+    
     <div class="container">
         <ul class="recipe-list">
             <li class="recipes"><a href="./recipes/soba_noodle_salad.html">Soba Noodle Salad</a></li>
