--- a/recipes/eggplant.html
+++ b/recipes/eggplant.html
@@ -8,26 +8,32 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body class="eggplant">
-    <h1>Roasted Eggplant</h1>
-    <img src="../images/roasted_eggplant.jpeg" alt="Roasted Eggplant">
-    <h2>Description</h2>
-    <p>
-        Carmelised and golden eggplant. Blasted in a hot oven for your satisfaction.
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 medium eggplants (700g)</li>
-        <li>3 tablespoons olive oil</li>
-        <li>1/2 tsp salt</li>
-        <li>1/2 tsp black pepper</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Preheat oven to 240C (220C fan)</li>
-        <li>Line a tray with parchment/baking paper (optional – recommended for first timers so you don’t lose the caramelised surface).</li>
-        <li>Cut eggplant into large cubes – 3 cm / 1.2″. Place in large bowl, drizzle with oil, salt and pepper.</li>
-        <li>Toss well, spread on tray, roast 20 minutes. Turn, roast for a further 10 minutes – edges should be caramelised, soft inside, but they’re not shrivelled up and dismal.</li>
-        <li>Transfer to serving plate. Delicious served plain, but see below for some finishing options.</li>
-    </ol>
+    <div class="title">
+        <h1>Roasted Eggplant</h1>
+    </div>
+    <div>
+        <img src="../images/roasted_eggplant.jpeg" alt="Roasted Eggplant">
+    </div>
+    <div class="main-content">
+        <h2>Description</h2>
+        <p>
+            Carmelised and golden eggplant. Blasted in a hot oven for your satisfaction.
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 medium eggplants (700g)</li>
+            <li>3 tablespoons olive oil</li>
+            <li>1/2 tsp salt</li>
+            <li>1/2 tsp black pepper</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat oven to 240C (220C fan)</li>
+            <li>Line a tray with parchment/baking paper (optional – recommended for first timers so you don’t lose the caramelised surface).</li>
+            <li>Cut eggplant into large cubes – 3 cm / 1.2″. Place in large bowl, drizzle with oil, salt and pepper.</li>
+            <li>Toss well, spread on tray, roast 20 minutes. Turn, roast for a further 10 minutes – edges should be caramelised, soft inside, but they’re not shrivelled up and dismal.</li>
+            <li>Transfer to serving plate. Delicious served plain, but see below for some finishing options.</li>
+        </ol>
+    </div>    
 </body>
 </html>
