--- a/recipes/soba_noodle_salad.html
+++ b/recipes/soba_noodle_salad.html
@@ -8,39 +8,45 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body class="soba">
-    <h1>Soba Noodle Salad</h1>
-    <img src="../images/soba_salad.jpeg" alt="Soba Salad Noodles">
-    <h2>Description</h2>
-    <p>
-        A tasty Japanese soba noodle salad. Perfect for nice summer's day. With only a few simple ingredients, this dish will be a crowd-pleaser for sure!
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>Soba noodles</li>
-        <li>Green onions</li>
-        <li>Coriander</li>
-        <li>Roasted sesame seeds</li>
-        <li>Dressing:</li>
+    <div class="title">
+        <h1>Soba Noodle Salad</h1>
+    </div>
+    <div>
+        <img src="../images/soba_salad.jpeg" alt="Soba Salad Noodles">
+    </div>
+    <div class="main-content">
+        <h2>Description</h2>
+        <p>
+            A tasty Japanese soba noodle salad. Perfect for nice summer's day. With only a few simple ingredients, this dish will be a crowd-pleaser for sure!
+        </p>
+        <h2>Ingredients</h2>
         <ul>
-            <li>Neutral Oil</li>
-            <li>Roasted Sesame Oil</li>
-            <li>Crushed chili flakes</li>
-            <li>Honey</li>
-            <li>Soy Sauce</li>
+            <li>Soba noodles</li>
+            <li>Green onions</li>
+            <li>Coriander</li>
+            <li>Roasted sesame seeds</li>
+            <li>Dressing:</li>
+            <ul>
+                <li>Neutral Oil</li>
+                <li>Roasted Sesame Oil</li>
+                <li>Crushed chili flakes</li>
+                <li>Honey</li>
+                <li>Soy Sauce</li>
+            </ul>
         </ul>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li><strong>Make the salad dressing:</strong>
-            Heat the neutral oil, sesame oil, and red chili pepper flakes in a saucepan and cook until fragrant. Remove from the heat and add the honey and soy sauce. Set aside to cool.
+        <h2>Steps</h2>
+        <ol>
+            <li><strong>Make the salad dressing:</strong>
+                Heat the neutral oil, sesame oil, and red chili pepper flakes in a saucepan and cook until fragrant. Remove from the heat and add the honey and soy sauce. Set aside to cool.
 
-        </li>
-        <li><strong>Boil the soba noodles:</strong>
-            Cook according to the package instructions. Drain and rinse off the starch under cold running water. Drain well and set aside.
-        </li>
-        <li><strong>Assemble:</strong>
-            Combine the chilled noodles, the cooled dressing, freshly chopped green onions and coriander, and sesame seeds in a large bowl. Toss everything together and serve immediately.
-        </li>
-    </ol>
+            </li>
+            <li><strong>Boil the soba noodles:</strong>
+                Cook according to the package instructions. Drain and rinse off the starch under cold running water. Drain well and set aside.
+            </li>
+            <li><strong>Assemble:</strong>
+                Combine the chilled noodles, the cooled dressing, freshly chopped green onions and coriander, and sesame seeds in a large bowl. Toss everything together and serve immediately.
+            </li>
+        </ol>
+    </div>
 </body>
 </html>
