--- a/recipes/french_toast.html
+++ b/recipes/french_toast.html
@@ -8,33 +8,39 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body class="french">
-    <h1>French Toast</h1>
-    <img src="../images/french_toast1.jpeg" alt="French Toast">
-    <h2>Description</h2>
-    <p>
-        Fluffy and scrumptious French Toast. Perfect for a warm wintery morning brunch or breakfast treat!
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 large eggs</li>
-        <li>1 cup milk</li>
-        <li>Pinch of kosher salt</li>
-        <li>1 tablespoon granulated sugar</li>
-        <li>1 teaspoon vanilla extract</li>
-        <li>1 teaspoon ground cinnamon</li>
-        <li>8 slices sandwich bread</li>
-        <li>butter</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li><strong>Whisk and dip:</strong>
-            Whisk together eggs, milk, salt, sugar, vanilla extract, and ground cinnamon in a flat-bottomed shallow baking dish. Place bread slices, one or two at a time, into the egg mixture and flip to make sure both sides of bread are well-coated.            
-        </li>
-        <li><strong>Cook:</strong>
-            Melt butter in a large skillet or on a griddle. Place bread slices in skillet or on griddle and cook on medium heat until golden brown on each side, about 2-3 minutes.
-        </li>
-        <li><strong>Serve:</strong>Serve immediately or keep warm in oven until ready to serve, but no longer than about 30 minutes.
-        </li>
-    </ol>
+    <div class="title">
+        <h1>French Toast</h1>
+    </div>
+    <div>
+        <img src="../images/french_toast1.jpeg" alt="French Toast">
+    </div>
+    <div class="main-content">
+        <h2>Description</h2>
+        <p>
+            Fluffy and scrumptious French Toast. Perfect for a warm wintery morning brunch or breakfast treat!
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 large eggs</li>
+            <li>1 cup milk</li>
+            <li>Pinch of kosher salt</li>
+            <li>1 tablespoon granulated sugar</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>1 teaspoon ground cinnamon</li>
+            <li>8 slices sandwich bread</li>
+            <li>butter</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li><strong>Whisk and dip:</strong>
+                Whisk together eggs, milk, salt, sugar, vanilla extract, and ground cinnamon in a flat-bottomed shallow baking dish. Place bread slices, one or two at a time, into the egg mixture and flip to make sure both sides of bread are well-coated.            
+            </li>
+            <li><strong>Cook:</strong>
+                Melt butter in a large skillet or on a griddle. Place bread slices in skillet or on griddle and cook on medium heat until golden brown on each side, about 2-3 minutes.
+            </li>
+            <li><strong>Serve:</strong>Serve immediately or keep warm in oven until ready to serve, but no longer than about 30 minutes.
+            </li>
+        </ol>
+    </div>
 </body>
 </html>
